# SudoBot-Guard-Beta

./: .env.example  .gitignore  Cargo.toml
deploy/: RUNBOOK.md  backup-base.sh  common.sh  deploy.sh  disk-check.sh  heartbeat.sh  restore.sh  setup.sh  sudobot-guard.service.template
docs/superpowers/plans/: 2026-07-20-sudobot-guard-phase1-foundation.md
docs/superpowers/specs/: 2026-07-20-sudobot-guard-phase1-design.md
migrations/: 0001_init.sql  0002_guild_settings.sql  0003_role_baselines.sql  0004_panic_mode.sql  0005_role_members.sql
src/: auth.rs  config.rs  db.rs  elevation.rs  enrollment.rs  logging.rs  main.rs  panic.rs  settings.rs  yubico.rs
src/commands/: auth.rs  baseline.rs  calm.rs  enroll.rs  lockdown.rs  mod.rs  panic.rs  panic_voters.rs  protect.rs  settings.rs  setup.rs
src/crypto/: backup_codes.rs  encryption.rs  mod.rs  totp.rs
src/guard/: audit_handler.rs  backfill.rs  baseline.rs  mod.rs  position_reconcile_guard.rs  reaction.rs  recreation_guard.rs  role_members.rs  sweep.rs
