[package]
name = "sudobot_guard"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Ryanmello07/SudoBot-Guard-Beta"

[dependencies]
aes-gcm = "0.11.0"
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
dotenvy = "0.15.7"
hex = "0.4.3"
hmac = "0.13.0"
rand = "0.10.2"
reqwest = { version = "0.13.4", features = ["json", "query"] }
serenity = "0.12.5"
sha1 = "0.11.0"
sqlx = { version = "0.9.0", default-features = false, features = ["postgres", "macros", "migrate", "chrono", "tls-rustls-ring-webpki", "runtime-tokio"] }
subtle = "2.6.1"
thiserror = "2.0.19"
tokio = { version = "1.53.0", features = ["full"] }
totp-rs = { version = "5.7.2", features = ["gen_secret", "qr"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
